# rl23

./: Cargo.toml  README.md
assets/: tiles-source.aseprite  tiles.im256  world_map.aseprite
assets/dialogues/ru/: narrator.ron
rl23-map-edit/: Cargo.toml
rl23-map-edit/src/: main.rs  usages.txt
rl23-map-edit/src/editor/: mod.rs  tool.rs
rl23-map-format/: Cargo.toml
rl23-map-format/src/: lib.rs
