[package]
name = "rl23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retro-blit = { git = "https://github.com/madwareru/retro-blit.git", version = "0.1.1" }
egui = "0.19"
flat_spatial = "0.3"
bevy_ecs = "0.9"