[package]
name = "rl23-map-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rl23-map-format = { path = "../rl23-map-format" }
retro-blit = { git = "https://github.com/madwareru/retro-blit.git", version = "0.1.8" }
egui = "0.19"
rand = "0.8"